<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDFDF">

    <androidx.cardview.widget.CardView
        android:id="@+id/close"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="0dp"
        android:focusable="true"
        android:clickable="true"
        app:cardBackgroundColor="#FCC0C0"
        android:layout_margin="10dp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:cardCornerRadius="360dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:fontFamily="@font/sacramento_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recipe_title"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        android:textSize="45sp"
        android:fontFamily="@font/sacramento_regular"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@id/recipe_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg_butter_milk_omelette"/>

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg_flour_milk_pancake"/>

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk_milk_flour_crepes"/>

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mix_everything_cake"/>

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butter_sugar_icing"/>

        <TextView
            android:padding="5dp"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg_egg_scrambled_egg"/>
    </LinearLayout>
</RelativeLayout>