<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mix_background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MixFragment">

    <androidx.cardview.widget.CardView
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="0dp"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/question_button"
        app:cardBackgroundColor="#7FFDFDFD"
        android:layout_margin="10dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="360dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="\?"
            android:fontFamily="@font/sacramento_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/icon_group"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/cupcake"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mix_and_make"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="35sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_display"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/icon_group"
        android:background="#CBFFECEC"
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/recipe_display"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:fontFamily="@font/sacramento_regular"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_recipes"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/clear_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#7FEDA5A5"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="0dp"
            android:focusable="true"
            android:clickable="true"
            app:cardCornerRadius="360dp"
            android:layout_width="25dp"
            android:layout_height="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_clear_24"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:overScrollMode="never"
        tools:listitem="@layout/recipe_item"
        android:layout_below="@id/container_display"
        android:id="@+id/recipes_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="0dp"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/add"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="#7FEDA5A5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="360dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textStyle="bold"
                    android:textSize="65sp"
                    android:fontFamily="@font/sacramento_regular"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="#7FEDA5A5"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="0dp"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/equals"
            android:layout_marginStart="25dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="360dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals"
                    android:textStyle="bold"
                    android:textSize="65sp"
                    android:fontFamily="@font/sacramento_regular"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>